--- a/about.html
+++ b/about.html
@@ -25,21 +25,21 @@
 		</Section>
 		<section>
 			<h1>About</h1>
-			<p class="write">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, laboriosam voluptatibus possimus eos adipisci ea, temporibus atque deleniti pariatur doloremque porro eaque numquam, quaerat dicta delectus officiis. Quam, aliquid ipsam?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum officiis sit, delectus deserunt eligendi harum non optio, ullam, minima eius at vero cumque! In commodi maxime nobis, illo tenetur voluptatem?</p>
+			<p class="write">Leverage agile framework to provide a robust synopsis for high level overview. iterative approach to corporate strategy foster collaborative thinking to futher the overall value proposition. organically grow the holistic world view of  disruptive innovation via workplace diversity and self empowerment</p>
 		</section>
 		<section>
 			<hr>
 			<div class="about-working">
 				<div>
 					<img src="images/about-plan.png" alt="">
-					<h2>Strategy</h2>
+					<h4>Strategy</h4>
 					<p class="write">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, earum blanditiis quidem maxime assumenda at quia? Dolorem nemo accusantium id odit magnam? Dolore nemo veritatis, minima dolores dignissimos consequatur aliquid.</p>
 					<button>Learn More</button>
 				</div>
 				<div>
 					<img src="images/about-working.png" alt="">
-					<h2>How We Work</h2>
-					<p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint voluptate aperiam maxime id, quaerat voluptatem exercitationem hic! Hic obcaecati impedit adipisci. Eos animi quo, modi assumenda ex culpa eius! Beatae?</p>
+					<h4>How We Work</h4>
+					<p class="write">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint voluptate aperiam maxime id, quaerat voluptatem exercitationem hic! Hic obcaecati impedit adipisci. Eos animi quo, modi assumenda ex culpa eius! Beatae?</p>
 					<button>Learn More</button>
 				</div>
 			</div>
@@ -50,13 +50,13 @@
 			<div class="office">
 				<div>
 					<img src="images/about-office.png" alt="">
-					<h2>Place We Work</h2>
+					<h4>Place We Work</h4>
 					<p class="write">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae officiis recusandae quisquam sunt, eius deleniti eveniet, nobis dolorum iste quidem voluptate natus omnis qui molestias nam, aspernatur aperiam modi nostrum.</p>
 					<button>Learn More</button>
 				</div>
 				<div>
 					<img src="images/about-meeting.png" alt="">
-					<h2>Collaboration</h2>
+					<h4>Collaboration</h4>
 					<p class="write">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex, sequi, odio eos consequuntur quae reiciendis quibusdam asperiores illo dolor eum delectus tempore temporibus natus voluptate provident sed ab obcaecati quasi.</p>
 					<button>Learn More</button>
 				</div>
@@ -65,7 +65,7 @@
 		</section>
 		<section>
 			<hr>
-			<h1>let work together</h1>
+			<h4>let work together</h4>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ut quae culpa aliquam alias eum, itaque accusantium sapiente est repudiandae similique dignissimos. Voluptatem fuga nihil molestias tempora aperiam facilis fugit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus explicabo expedita officiis earum beatae facilis vero a dolorem unde animi labore dolor vel quasi reprehenderit quia, architecto repudiandae sequi sint.</p>
 		</section>
         <section>
