--- a/about.html
+++ b/about.html
@@ -32,14 +32,16 @@
 			<div class="about-working">
 				<div>
 					<img src="images/about-plan.png" alt="">
-					<h4>Strategy</h4>
+					<p class="bold">Strategy</p>
 					<p class="write">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, earum blanditiis quidem maxime assumenda at quia? Dolorem nemo accusantium id odit magnam? Dolore nemo veritatis, minima dolores dignissimos consequatur aliquid.</p>
 					<button>Learn More</button>
 				</div>
 				<div>
 					<img src="images/about-working.png" alt="">
-					<h4>How We Work</h4>
-					<p class="write">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint voluptate aperiam maxime id, quaerat voluptatem exercitationem hic! Hic obcaecati impedit adipisci. Eos animi quo, modi assumenda ex culpa eius! Beatae?</p>
+					<p class="bold">How We Work</p>
+					<p class="write">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint voluptate aperiam maxime id, quaerat voluptatem exercitationem hic! Hic obcaecati impedit adipisci. Eos animi quo, modi assumenda ex culpa eius! Beatae?
+
+					</p>
 					<button>Learn More</button>
 				</div>
 			</div>
@@ -50,13 +52,13 @@
 			<div class="office">
 				<div>
 					<img src="images/about-office.png" alt="">
-					<h4>Place We Work</h4>
+					<p class="bold">Place We Work</p>
 					<p class="write">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae officiis recusandae quisquam sunt, eius deleniti eveniet, nobis dolorum iste quidem voluptate natus omnis qui molestias nam, aspernatur aperiam modi nostrum.</p>
 					<button>Learn More</button>
 				</div>
 				<div>
 					<img src="images/about-meeting.png" alt="">
-					<h4>Collaboration</h4>
+					<p class="bold">Collaboration</p>
 					<p class="write">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex, sequi, odio eos consequuntur quae reiciendis quibusdam asperiores illo dolor eum delectus tempore temporibus natus voluptate provident sed ab obcaecati quasi.</p>
 					<button>Learn More</button>
 				</div>
@@ -65,7 +67,7 @@
 		</section>
 		<section>
 			<hr>
-			<h4>let work together</h4>
+			<p class="bold">let work together</p>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ut quae culpa aliquam alias eum, itaque accusantium sapiente est repudiandae similique dignissimos. Voluptatem fuga nihil molestias tempora aperiam facilis fugit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus explicabo expedita officiis earum beatae facilis vero a dolorem unde animi labore dolor vel quasi reprehenderit quia, architecto repudiandae sequi sint.</p>
 		</section>
         <section>
